cmake_minimum_required(VERSION 3.16)

project(MEOW)

file(GLOB_RECURSE MEOW_HEADERS CONFIGURE_DEPENDS include/meow/*.hpp include/meow/*.inl)
file(GLOB_RECURSE MEOW_SOURCES CONFIGURE_DEPENDS src/*.cpp)

add_library(MEOW ${MEOW_HEADERS} ${MEOW_SOURCES})

target_include_directories(MEOW
    PUBLIC
        $<INSTALL_INTERFACE:include>
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/include/meow
        ${CMAKE_CURRENT_SOURCE_DIR}/src
)

set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_EXTENSIONS OFF)